<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    app:startDestination="@id/dashboardFragment">

    <fragment
        android:id="@+id/dashboardFragment"
        android:name="com.example.fittrack.ui.main.DashboardFragment"
        android:label="@string/nav_dashboard" />

    <fragment
        android:id="@+id/workoutPlansFragment"
        android:name="com.example.fittrack.ui.main.WorkoutPlansFragment"
        android:label="@string/nav_plans" />

    <fragment
        android:id="@+id/exerciseLibraryFragment"
        android:name="com.example.fittrack.ui.main.ExerciseLibraryFragment"
        android:label="@string/nav_exercises" />

    <fragment
        android:id="@+id/socialFragment"
        android:name="com.example.fittrack.ui.main.SocialFragment"
        android:label="@string/nav_social" />

    <fragment
        android:id="@+id/profileFragment"
        android:name="com.example.fittrack.ui.main.ProfileFragment"
        android:label="@string/nav_profile" />

    <fragment
        android:id="@+id/progressFragment"
        android:name="com.example.fittrack.ui.main.ProgressFragment"
        android:label="@string/nav_progress" />

</navigation>